# clamav-gui

./: .clang-format  .gitignore  CHANGES  CMakeLists.txt  CPack.cmake  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README  README.md  clamav-gui.pro  cmake_install.cmake  cpack.cmake  default.nix  flake.nix  install.cmake  resources.qrc
.qt/: QtDeploySupport.cmake
extra/: ClamAV-GUI-ServiceMenu.desktop  ClamAV-GUI.desktop
qtest/: CMakeLists.txt  setupfilehandlertest.cpp
src/: cfilesystemmodel.cpp  cfilesystemmodel.h  clamav_ctrl.cpp  clamav_ctrl.h  clamav_gui.cpp  clamav_gui.h  clamdconfcomboboxoption.cpp  clamdconfcomboboxoption.h  clamdconfmultioption.cpp  clamdconfmultioption.h  clamdconfoptionbaseclass.cpp  clamdconfoptionbaseclass.h  clamdconfspinboxoption.cpp  clamdconfspinboxoption.h  clamdconfstringoption.cpp  clamdconfstringoption.h  clamdmanager.cpp  clamdmanager.h  dragablepushbutton.cpp  dragablepushbutton.h  firstrunwindow.cpp  firstrunwindow.h  freshclamsetter.cpp  freshclamsetter.h  highlighter.cpp  highlighter.h  includeexcludeoptions.cpp  includeexcludeoptions.h  infodialog.cpp  infodialog.h  logviewerobject.cpp  logviewerobject.h  logviewobject.cpp  logviewobject.h  main.cpp  myframe.cpp  myframe.h  optionsdialog.cpp  optionsdialog.h  partiallogobject.cpp  (+29 more)
test/: CMakeLists.txt  setupfilehandlertest.cpp
translations/: clamav-da_DK.qm  clamav-da_DK.ts  clamav-de_DE.qm  clamav-de_DE.ts  clamav-en_GB.qm  clamav-en_GB.ts  clamav-es_ES.qm  clamav-es_ES.ts  clamav-fr_FR.qm  clamav-fr_FR.ts  clamav-gui-da_DK.qm  clamav-gui-da_DK.ts  (+24 more)
(+24 files in other folders)
